--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongoose": "^5.13.7",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x",
